system/gitea/templates/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitea.simonmalm.com`)
      kind: Rule
      services:
        - name: gitea-http
          port: 3000
    - match: Host(`gitea.local.simonmalm.com`)
      kind: Rule
      services:
        - name: gitea-http
          port: 3000

  tls:
    secretName: gitea-simonmalm-com
